# austin-web

./: .travis.yml  CONTRIBUTING.md  README.md  noxfile.py  pyproject.toml
.github/workflows/: checks.yml  tests.yml
austin_web/: __main__.py  _figlet.py  data.py
austin_web/html/: __init__.py  austin_web.html  flamegraph.js  index.html  main.css  ui_static.html  websocket.js
test/: target.py  test_cli.py  test_compile.py  test_data.py  test_html.py  test_serve.py
