# This file is part of "austin-web" which is released under GPL.
#
# See file LICENCE or go to http://www.gnu.org/licenses/ for full license
# details.
#
# austin-web is a Python wrapper around Austin, the CPython frame stack
# sampler.
#
# Copyright (c) 2018-2020 Gabriele N. Tornetta <phoenix1987@gmail.com>.
# All rights reserved.
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

[tool.poetry]
authors = ["Gabriele N. Tornetta <phoenix1987@gmail.com>"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
]
description = "Flame graph web application for Austin"
homepage = "https://github.com/P403n1x87/austin-web"
keywords = ["performance", "profiling", "testing", "development"]
license = "GPL-3.0-or-later"
name = "austin-web"
packages = [
  {include = "austin_web"},
]
readme = "README.md"
repository = "https://github.com/P403n1x87/austin-web"
version = "0.0.0"

[tool.poetry.scripts]
austin-web = "austin_web.__main__:main"

[tool.poetry.dependencies]
aiohttp = "^3.6.2"
austin-python = "^0.2.0"
halo = "^0.0.29"
importlib_resources = "^3.0.0"
pyfiglet = "^0.8.post1"
python = "^3.6"

[tool.poetry.dev-dependencies]
codecov = "^2.1.3"
coverage = {extras = ["toml"], version = "*"}
mypy = "^0.770"
nox = "^2020.5.24"
pytest = ">=5.4.2"
pytest-cov = ">=2.8.1"
requests = "^2.24.0"

[tool.poetry.urls]
issues = "https://github.com/P403n1x87/austin-web/issues"

[tool.poetry-dynamic-versioning]
enable = true

[tool.coverage.run]
branch = true
source = ["austin_web"]

[tool.coverage.report]
show_missing = true

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12", "poetry-dynamic-versioning"]
